# Sonarqube-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: sonarqube.yml
runner/: Dockerfile  docker-compose.yml
sonarqube-app/: .dockerignore  Dockerfile  FIXES.md  GUIDE.md  README.md  docker-compose.yml  project_requirements.md  pyproject.toml  sonar-project.properties
sonarqube-app/src/: app.py  data_processor.py  data_processor_BAD.py
sonarqube-app/tests/: test_app.py  test_data_processor.py
