[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sonarqube-app"
version = "1.0.0"
description = "FastAPI demo app for SonarQube CI/CD assignment"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn==0.34.2",
    "starlette>=0.49.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "anyio[trio]",
    "ruff",
    "black",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
fail_under = 80
